--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,7 @@
-*.txt           text
-*.vcproj        eol=crlf
-*.bat           eol=crlf
-*.jpg           -text
-*.el            eol=lf
+*.txt                   text
+*.vcproj                eol=crlf
+*.bat                   eol=crlf
+*.jpg                   -text
+*.el                    eol=lf
+*.org                   eol=lf
+emacs/site-lisp/*       eol=lf
