--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,3 @@
 # -*- mode: gitignore; -*-
-
 .DS_Store
-emacs/elpa
-emacs/autosaves
-emacs/auto-save-list
-emacs/helm-adaptive-history
-emacs/private.el
-emacs/init.elc
-emacs/projectile-bookmarks.eld
-emacs/recentf
-emacs/bookmarks
+*.swp
