--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,4 @@
-set-option -g prefix C-x
-# Add truecolor support
-set-option -ga terminal-overrides ",xterm-256color:Tc"
-# Default terminal is 256 colors
+set -g prefix C-x
+set -g history-limit 300000
 set -g default-terminal "screen-256color"
+set -g terminal-overrides 'xterm*:smcup@:rmcup@'
