--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,3 +2,7 @@ set -g prefix C-x
 set -g history-limit 300000
 set -g default-terminal "screen-256color"
 set -g terminal-overrides 'xterm*:smcup@:rmcup@'
+
+# set -g status off
+set -g status-bg black
+set -g status-fg white
